--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,12 @@
 /* reset */
 *{
-    padding: 0;
+   
     margin: 0;
     box-sizing: border-box;
+}
+
+*:not(ul){
+    padding:0;
 }
 /*-------*/
 
@@ -11,27 +15,8 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-
-
-/*-------DEBUG---------*/
-
-.debug{
-
-    background-color: aqua;
-    border: 3px dashed red;
+.striked-text{
+    text-decoration: line-through;
 }
 
-.debug header{
-    background-color: goldenrod;
-    border: 3px dotted green;
-}
 
-.debug main{
-    background-color: crimson;
-    border: 3px solid blue;
-}
-
-.debug footer{
-    background-color: darkorange;
-    border: 3px dashed blueviolet;
-}
